--- a/Thesis/bibliography/references.bib
+++ b/Thesis/bibliography/references.bib
@@ -193,3 +193,23 @@
   pages={163--181},
   year={2006}
 }
+@article{bialunska2011increasing,
+  title={Increasing stimulus intensity does not affect sensorimotor synchronization},
+  author={Bia{\l}u{\'n}ska, Anita and Dalla Bella, Simone and Ja{\'s}kowski, Piotr},
+  journal={Psychological research},
+  volume={75},
+  number={1},
+  pages={43--53},
+  year={2011},
+  publisher={Springer}
+}
+@article{krause2010perception,
+  title={Perception in action: the impact of sensory information on sensorimotor synchronization in musicians and non-musicians},
+  author={Krause, Vanessa and Pollok, Bettina and Schnitzler, Alfons},
+  journal={Acta psychologica},
+  volume={133},
+  number={1},
+  pages={28--37},
+  year={2010},
+  publisher={Elsevier}
+}
