--- a/Thesis/thesis-method.tex
+++ b/Thesis/thesis-method.tex
@@ -155,7 +155,7 @@ High precision data acquisition and the minimization of delay were the central f
 
 A sensorimotor synchronization experiment was conducted to discover how auditory feedback to a tap onset could be presented with minimal latency and responses recorded with the most accuracy. It was found that not only was the auditory response latency the least for the Arduino system using a force sensitive resistor (mean = 0.6 ms, sd = 0.3), but it had missed the fewest taps and recorded the least superfluous responses as compared to a percussion pad with the FTAP and Max MSP systems [Tap Arduino, 1].
 
-\subsection{Delay Evaluation}
+\subsection{Delay Evaluation} \label{latencyCalc}
 
 Overall strategy to minimize delay maximize accuracy/precision
 
