--- a/Thesis/thesis-acknowledgments.tex
+++ b/Thesis/thesis-acknowledgments.tex
@@ -13,6 +13,6 @@ To Professor Riccardo Schulz for the unending care and devotion you show to all 
 
 To my roommates and close friends, Mike and Craig. For those long nights of brainstorming possibilities and troubleshooting. Thank you for not only being my think tank but for keeping me inspired and grounded.
 
-To my fellow colleagues Anirudh and Garrett for the drive, motivation, and camaraderie we have been able to experience these past two years. And for their support in proofreading this work.
+To my dear friends and colleagues, Anirudh and Garrett. For the drive, motivation, and camaraderie we have been able to experience these past two years. And for their support in proofreading this work.
 
-Last but not least, a special thank you for the undying love and support of Rachel, for keeping the light at the end of the tunnel shining and maintaining my focus toward the end goal.
+Last but certainly not least, a special thank you to Rachel for the unending love and support in keeping the light at the end of the tunnel shining.
