--- a/Thesis/thesis-dedication.tex
+++ b/Thesis/thesis-dedication.tex
@@ -1,3 +1,3 @@
 % -*- mode:LaTex; mode:visual-line; mode:flyspell; fill-column:75-*-
 
-To my grandmother, for instilling in me a thirst for knowledge and the joy of learning.
+To my grandmother, for early guidance towards a lifelong quest of knowledge and truth.
