--- a/Thesis/thesis-title.tex
+++ b/Thesis/thesis-title.tex
@@ -1,6 +1,6 @@
 % -*- mode:LaTex; mode:visual-line; mode:flyspell; fill-column:75-*-
 
-\title{\textbf{An evaluation of the interstitial beat across multi-sensory modalities for characterization of a meaningful haptic enviro-sensing metronome}\\ \vspace{12pt}}
+\title{\textbf{An evaluation of the interstitial beat across the modalities of touch and sound for the characterization of a meaningful haptic metronome}\\ \vspace{12pt}}
 \author{Nick Pourazima}
 \date{May 19, 2018}
 \Year{2018}
