--- a/Thesis/thesis-introduction.tex
+++ b/Thesis/thesis-introduction.tex
@@ -5,11 +5,11 @@ The interstice is an intervening space. When applied to a rhythmic context, the 
 
 The underlying question, as applied to the daily practice of a trained musician or the innate entrainment (external rhythmic synchronization) of the average human being, is whether the space between the beat matters. Does filling the space provide an added awareness or preparation for upcoming onsets?
 
-The objective of this work is to display whether a continuous wave, one which leads up to the maximum amplitude of the beat and trails off into a smooth decay, exhibits differentiation from it's instantaneous counterpart in communicating regular or irregular pulses. To quantify this differentiation, an expansive set of analog and discrete tap synchronization tests spanning the modalities of sound and touch are conducted across groups of musicians, amateurs, and non-musicians.
+The objective of this work is to display whether a continuous wave, one which leads up to the maximum amplitude of the beat and trails off into a smooth decay, exhibits differentiation from it's instantaneous counterpart in communicating regular or irregular pulses. To quantify this differentiation, an expansive set of analog and discrete tap synchronization tests spanning the modalities of sound and touch are conducted across a group of musicians, amateurs, and non-musicians.
 
-Ancillary to this work, a haptic wearable is prototyped and evaluated for design optimization with an overarching goal of translating the gestural motion of the conductor in communicating dynamic changes more effectively.
+Ancillary to this work, a haptic wearable is prototyped and evaluated for design optimization with an overarching goal of translating the gestural motion of the conductor.
 
-The research enables an expansion of the existing sensorimotor synchronization findings to the haptic modality in continuous form, with the intent to resolve the inquiry as to whether filling in the space between the beat, the interstitial, has a positive impact on rhythmic awareness.
+The project presents a unique opportunity to enable expansion of the existing sensorimotor synchronization findings to the haptic modality in continuous form, with the intent to resolve the inquiry as to whether filling in the space between the beat, the interstitial, has a positive impact in communicating dynamic changes more effectively.
 
 \section{Motivation}
 While it is clear that nearly every professional musician has honed technique over countless hours of practice to an audible metronome, it is not directly obvious whether he/she has ingrained a true sense of rhythm at the foundational level with the primary instrument of expression, the body itself.
@@ -18,17 +18,17 @@ Intrinsic awareness to subtle nuances of tempo remains a subject commonly unexpo
 
 Is there missing information from the daily practice of a trained musician to an audible metronome? In a traditional sense, the audible click of Maelzel's metronome minimizes the interstitial space with an instantaneous (or discrete) impulse signal. However, the pendulum motion exhibited also seeks to convey meaningful rhythmic information with the space it occupies in the visual modality, much like the gestural motion of a conductor. Although an excellent tool in establishing a sense of musical time and precision, the danger in use of such a mechanical object lies within the mathematical exactitude according to American composer and music critic Daniel Gregory Mason. Therefore manifesting a lifelessness where instead a living and breathing musical entity should exist with its own ``ebb and flow of rhythmical energy.''\cite{fitts2008new}
 
-The practice of Dalcroze Eurythmics has sought to fill this knowledge gap as a curriculum developed by composer and educator Emile Jaques-Dalcroze in the early 1900's to integrate natural musical expression via movement \cite{jaques1930eurhythmics}. Through a series of exercises the instructor ushers his students to coordinate movement to varying levels of rhythmic push and pull. The participants arm could, for example, be conducting to a subdivision played in the melody while simultaneously coordinating walking to the fundamental pulse played in the harmony. A sense of constant forward motion pervades the musicians actions allowing an embodiment of continuity which seeks to translate to all elements of an artists musicality.
-
-From nearly two decades of work as a licensed Dalcroze instructor at Carnegie Mellon University, Professor Stephen Neely has implemented these techniques. His current research in design seeks to further explore the interstitial. In doing so he imparts the question: what is gained when attempting to fill the space between the crusis (click moment of the beat) with a natural analogue wave, one that provides a build up and decay common to natural happenings, much like the gestural motion of a conductor?
-
 \section{Background}
-\subsection{Sensorimotor synchronization}
-The realm of research surrounding the psychology of rhythmic perception is grounded within the framework of \textit{sensorimotor synchronization} (\textit{SMS}); defined as the coordination of rhythmic movement to an external rhythm. 
+The practice of Dalcroze Eurythmics has sought to fill this knowledge gap as a curriculum developed by composer and educator Emile Jaques-Dalcroze in the early 1900's to integrate natural musical expression via movement \cite{jaques1930eurhythmics}. Through a series of exercises the instructor ushers his students to coordinate movement to varying levels of rhythmic push and pull. A students hands might, for example, be conducting a subdivision heard in the melody while simultaneously walking in coordination to the fundamental pulse played in the harmony. A sense of constant forward motion pervades the actions of the student allowing an embodiment of continuity which seeks to permeate all elements of musicality development.
 
-What follows is a brief overview of SMS. Critical terminology is defined \ref{SMSTerms} followed by a primer of available tap test software \ref{ttsw}. Last, a foundational framework of the current work is established by exploring relevant expectations illuminated by prior SMS research \ref{SMSFindings} and discussing both biomechanical and perception limitations \ref{rateLimits}.
+From nearly two decades of work as a licensed Dalcroze instructor at Carnegie Mellon University, Professor Stephen Neely has implemented these techniques. His current research in design seeks to further explore the interstitial. In doing so he imparts an inquiry as to what is gained in attempting to fill the space between the \textit{crusis} (click moment of the beat) with a natural analogue wave, one that provides a build up and decay common to natural happenings, much like the gestural motion of a conductor.
 
-\subsubsection{Terminology} \label{SMSTerms}
+\section{Sensorimotor synchronization}
+Research surrounding the psychology of rhythmic perception is grounded within the framework of \textit{sensorimotor synchronization} (\textit{SMS}); defined as the coordination of rhythmic movement to an external rhythm. 
+
+What follows is a brief overview of SMS. Critical terminology is defined \ref{SMSTerms} followed by a primer of available tap test software \ref{ttsw}. A framework of the current work is established through discoveries illuminated by prior SMS research \ref{SMSFindings}. A brief discussion of both biomechanical and perception limitations \ref{rateLimits} concludes this chapter.
+
+\subsection{Terminology} \label{SMSTerms}
 The main method of data collection for SMS tap based tests involve collection of the time delta between the tap and event onset, called the \textit{asynchrony}. Within the context of this work it shall be defined as:
 \begin{equation*}
     Tap Onset-True Onset
@@ -36,46 +36,56 @@ The main method of data collection for SMS tap based tests involve collection of
 
 The mean of this asynchrony is typically negative (\textit{NMA}), indicative of the participants anticipation of the beat rather than reaction. Positive asynchonies within the shortest reaction time window (150 ms) are arguably an anticipation of the preceeding stimuli. 
 
-The standard deviation of the asynchrony $(SD_{asy})$ is an index of stability; lower values indicative of a better level of synchronization.  \cite{repp2013sensorimotor}
+The standard deviation of the asynchrony $(SD_{asy})$ is an index of stability; lower values indicative of a better level of synchronization \cite{repp2013sensorimotor}.
 
 Other important metrics include the variability and mean of the inter tap interval (\textit{ITI}) and the inter onset interval (\textit{IOI}), or the time between successive beats, measured in milliseconds. Mismatch between the ITI and IOI implies poor synchronization skill from the participant. 
 
-\textit{Phase Correction Response} 
+\textit{Phase Correction Response} is defined as the shift of the immediately following tap from its expected time point, given by:
+\begin{equation*}
+    PCR = (Tap Onset_{n+1} - True Onset_{n+1})-(Tap Onset_{n} - True Onset_{n})
+\end{equation*}
 
 When a participant is instructed to tap on the beat, this is termed 1:1 synchronization. 4:1 synchronization, for example, is a beat subdivided into four with one tap on the beat. Subdivision tests typically yield lower mean $(SD_{asy})$ values \cite{repp2013sensorimotor}. This work will focus on 1:1 synchronization as discussed in \ref{testSetup}.
 
-\subsubsection{Tap Test Software} \label{ttsw}
+\subsection{Tap Test Software} \label{ttsw}
 Due to the reliability, precision \textit{(ms)}, and discrete nature, the finger tap mechanism holds strongest precedence in SMS research. As such the experiments in this project follow suit. 
 
 Studies predominantly rely on a MIDI based (drum pad) instrument to register tap events and provide some sort of auditory feedback. A few tap based software suites for experimentation and data acquisition are readily available: a Linux based system written by Finney in 2001 named \textit{FTAP} \cite{finney2001ftap}, and a \textit{Matlab} based toolbox by Elliot in 2009 called \textit{MatTAP} \cite{elliott2009mattap}. FTAP relied on a MIDI source and had a reported mean auditory latency of approximately 14.6ms (SD = 2.8) \cite{schultz2016tap}. Furthermore, superfluous and unregistered taps were common.
 
-Both \textit{FTAP} and \textit{MatTap} were experimented with as viable options for this work but ultimately deemed either outmoded, lacking high baudrate (115200) hardware support for haptic integration over serial, or incompatible with the system architecture in use \textit{(OSX 10.11.6 2.6GHz Intel I7)}.
+Both \textit{FTAP} and \textit{MatTap} were viable options for this work but ultimately deemed either outmoded, lacking high baudrate (115200) hardware support for haptic integration over serial, or incompatible with the system architecture in use \textit{(OSX 10.11.6 2.6GHz Intel I7)}.
 
 In a novel high-precision/low-latency approach by Prof. Schultz in 2015 at the University of Montreal \cite{schultz2016tap}, an Arduino force sensitive resistor (FSR) based tap mechanism was constructed. Latency between tap and auditory feedback was minimized with a mean of 0.6ms (SD = 0.3). The results also demonstrated the reliability of the FSR in recording fewer superfluous taps as well as fewer missed taps.
-It was inevitably decided to construct a custom software suite to fit the test needs of the project as discussed in Section \ref{development} which provided a round-trip latency of X as shown in \ref{latencyCalc}.
+It was inevitably decided to construct a custom software suite to fit the test needs of the project as discussed in Section \ref{development} which provided a round-trip latency of 
+\todo[inline]{Add latency metric here}
+as shown in \ref{latencyCalc}.
 
-\subsubsection{Expectations} \label{SMSFindings}
-The variability $(SD_{asy})$ is be generally lower in professional musicians that non-musicians (no musical exposure). In an isochronous test with IOI of 500ms, surprisingly no difference in $(SD_{asy})$ was found between amateurs and non-musicians \ref{repp2013sensorimotor}. From this study it is safe to assume the data analysis of this work will be grouped into professionals vs. (non-musicians and amateurs).
+\subsection{Expectations} \label{SMSFindings}
+SMS research has given key insight to the expectations which inform the data analysis conducted in \ref{DataAnalysis}.
+
+\subsubsection{Variability}
+The variability $(SD_{asy})$ is generally lower in professional musicians that non-musicians (no musical exposure). In an isochronous test with IOI of 500ms, surprisingly no difference in $(SD_{asy})$ was found between amateurs and non-musicians \ref{repp2013sensorimotor}. From this study it is safe to assume the data analysis of this work will be grouped into professionals vs. (non-musicians and amateurs).
 
 Percussionists and pianists had the lowest ITI of all musicians, which implies that a high level of rhythmic expertise reduces variability of tapping. Furthermore, as the duration of the IOI increases, or slower beats per minute, $(SD_{asy})$ increased in a non linear fashion. 
 
-The NMA is typically smaller for musicians than non-musicians and increases with IOI increase \cite{repp2013sensorimotor}. As a counter to the proposed hypothesis, Bialunkska et al. argued that the reason for a negative mean asynchrony was due to faster sensory accumulation from the auditory and visual modalities than from tactile feedback received from taps. The expectation was thus a dependence of the sensory accumulation rate to the stimulus intensity. This was later found to be uncorrelated \cite{bialunska2011increasing}.
+When professionals migrated away from the tap test and instead used their native instruments, the results were greatly improved. It was reported by Stoklasa, Liebermann, and Fischinger in a paper presented at the Music Perception and Cognition in 2012 that musicians playing their own brass or string instrument in synchrony with a metronome showed a negligible NMA ($–2 ms$), unlike their tapping results ($-13 ms$) \cite{repp2013sensorimotor}.
 
-A positive mean asynchrony is expected at the biomechanical limit of execution as discovered by Krause, Pollok, and Schnitzler in 2010 \cite{krause2010perception}.
+\subsubsection{Negative Mean Asynchrony}
+The NMA is typically smaller for musicians and remains relatively constant throughout a changing IOI. A linear increase in NMA as the IOI increases can be expected from non-musicians \cite{repp2013sensorimotor}. As opposed to steady or isochronous patterns, it was found that nonisochronous tapping introduces distortions within the ITI; affecting local asynchronies but leaving keeping the global NMA persistant ~\cite{polak2016both}.
+ 
+As a counter to the proposed hypothesis, Bialunkska et al. argued that the reason for a negative mean asynchrony was due to faster sensory accumulation from the auditory and visual modalities than from tactile feedback received from taps. The expectation was thus a dependence of the sensory accumulation rate to the stimulus intensity. This was later found to be uncorrelated \cite{bialunska2011increasing}.
 
-When professionals migrated away from the tap test and instead used their native instruments, the results were greatly improved. It was reported by Stoklasa, Liebermann, and Fischinger in a paper presented at the Music Perception and Cognition in 2012 that musicians playing their own brass or string instrument in synchrony with a metronome showed a negligible NMA (–2 ms), unlike their tapping results(–13 ms) \cite{repp2013sensorimotor}.
+A positive mean asynchrony is expected as the IOI approaches the biomechanical limit of execution as discovered by Krause, Pollok, and Schnitzler in 2010 \cite{krause2010perception}.
 
+\subsubsection{Auditory Dominance}
 SMS research historically identifies what is known as an auditory advantage, or the dominance of auditory/motor connection within the task of beat synchronization. The auditory advantage is discussed in detail in Section \ref{AudAdv}. However, recent studies have proven that given meaningful spatiotemporal information (as in the bouncing ball example discussed in \ref{visualMet}) synchronization is almost as good as an auditory metronome.
 
-Isochronous vs. nonisochronous ~\cite{polak2016both}
-
-\subsubsection{Rate Limits} \label{rateLimits}
+\subsection{Rate Limits} \label{rateLimits}
 In order to impose valid constraints on the tests carried out in this work, it is important to understand the SMS rate limits. 
 
 According to experiments done by Keele, Pokorny, Corcos, and Ivry, in 1985, the calculation for the fastest absolute response time possible for a tap based test can be divided into either that of perception or motor speed (also known as the biomechanical limit) \cite{keele1985perception}. It was shown that the biomechanical finger tap limit is between the 5-7Hz range (150-200ms) \cite{repp2006rate}.
 
 When discussing a perceptual basis, SMS tests are valid within a particular temporal range. For audio based tests, where 1 in every 4 beats was tapped, an upper rate limit was shown to be as high as 8-10Hz (100-125ms). Visual stimuli was found to be less than 2.5Hz (400ms). The lower rate limit was independent of modality and found to be 0.56Hz (1800ms) \cite{repp2006rate}. 
 
-It was important to establish a middle ground to determine a fair and effective IOI window across musicians and non-musicians. Since the capacity to entrain motor behaviors to a beat is predictive and flexible, (with the most preferred inter-beat intervals being approximately 600ms)~\cite{repp2013sensorimotor}, this work has chosen to focus on tempi ranging from 45-180 (333-1333ms).
+In order to establish a middle ground and determine a fair and effective IOI window across musicians and non-musicians, this work has chosen to focus on tempi ranging from 45-180 (333-1333ms).
 
-The rate limits of the touch modality are evaluated in \ref{}, the haptic design section which follows.
+The haptic design section which follows (\ref{hapticConsiderations})discusses the rate limits of the touch modality.
