--- a/Thesis/bibliography/references.bib
+++ b/Thesis/bibliography/references.bib
@@ -213,3 +213,12 @@
   year={2010},
   publisher={Elsevier}
 }
+@inproceedings{clayton2005time,
+  title={In time with the music: the concept of entrainment and its significance for ethnomusicology.},
+  author={Clayton, Martin and Sager, Rebecca and Will, Udo},
+  booktitle={European meetings in ethnomusicology.},
+  volume={11},
+  pages={1--82},
+  year={2005},
+  organization={Romanian Society for Ethnomusicology}
+}
