--- a/Thesis/thesis-introduction.tex
+++ b/Thesis/thesis-introduction.tex
@@ -12,21 +12,23 @@ Ancillary to this work, a haptic wearable is prototyped and evaluated for design
 The project presents a unique opportunity to enable expansion of the existing sensorimotor synchronization findings to the haptic modality in continuous form, with the intent to resolve the inquiry as to whether filling in the space between the beat, the interstitial, has a positive impact in communicating dynamic changes more effectively.
 
 \section{Motivation}
-While it is clear that nearly every professional musician has honed technique over countless hours of practice to an audible metronome, it is not directly obvious whether he/she has ingrained a true sense of rhythm at the foundational level with the primary instrument of expression, the body itself.
+While it is clear that nearly every professional musician has honed technique over countless hours of practice to an audible metronome, it is not directly obvious whether they have ingrained a true sense of rhythm at the foundational level with the primary instrument of expression, the body itself.
 
 Intrinsic awareness to subtle nuances of tempo remains a subject commonly unexposed to a student in training. Yet this ability, to perform in the spaces surrounding the beat, defines the difference between a rigid performance and one that flows with an elasticity and musical expression.
 
 Is there missing information from the daily practice of a trained musician to an audible metronome? In a traditional sense, the audible click of Maelzel's metronome minimizes the interstitial space with an instantaneous (or discrete) impulse signal. However, the pendulum motion exhibited also seeks to convey meaningful rhythmic information with the space it occupies in the visual modality, much like the gestural motion of a conductor. Although an excellent tool in establishing a sense of musical time and precision, the danger in use of such a mechanical object lies within the mathematical exactitude according to American composer and music critic Daniel Gregory Mason. Therefore manifesting a lifelessness where instead a living and breathing musical entity should exist with its own ``ebb and flow of rhythmical energy.''\cite{fitts2008new}
 
 \section{Background}
-The practice of Dalcroze Eurythmics has sought to fill this knowledge gap as a curriculum developed by composer and educator Emile Jaques-Dalcroze in the early 1900's to integrate natural musical expression via movement \cite{jaques1930eurhythmics}. Through a series of exercises the instructor ushers his students to coordinate movement to varying levels of rhythmic push and pull. A students hands might, for example, be conducting a subdivision heard in the melody while simultaneously walking in coordination to the fundamental pulse played in the harmony. A sense of constant forward motion pervades the actions of the student allowing an embodiment of continuity which seeks to permeate all elements of musicality development.
+Humans have an innate ability to not only notice periodic movement, but to mimic and adapt to changes in their environment \cite{clayton2005time}. The extent of these capacities can be expanded through training which consists of recognizing, retaining, analyzing, and reproducing rhythms \cite{holland2010feeling}. The results of which can hold extra-musical impact as rhythmic stability finds important applications into everyday life.
+
+The practice of Dalcroze Eurythmics has sought to fill this knowledge gap as a curriculum developed by composer and educator Emile Jaques-Dalcroze in the early 1900's to integrate natural musical expression via movement \cite{jaques1930eurhythmics}. Through a series of exercises the instructor ushers his students to coordinate movement to varying levels of rhythmic push and pull. A student's hands might, for example, be conducting a subdivision heard in the melody while simultaneously walking in coordination to the fundamental pulse played in the harmony. A sense of constant forward motion pervades the actions of the student allowing an embodiment of continuity which seeks to permeate all elements of musicality development.
 
 From nearly two decades of work as a licensed Dalcroze instructor at Carnegie Mellon University, Professor Stephen Neely has implemented these techniques. His current research in design seeks to further explore the interstitial. In doing so he imparts an inquiry as to what is gained in attempting to fill the space between the \textit{crusis} (click moment of the beat) with a natural analogue wave, one that provides a build up and decay common to natural happenings, much like the gestural motion of a conductor.
 
 \section{Sensorimotor synchronization}
 Research surrounding the psychology of rhythmic perception is grounded within the framework of \textit{sensorimotor synchronization} (\textit{SMS}); defined as the coordination of rhythmic movement to an external rhythm. 
 
-What follows is a brief overview of SMS. Critical terminology is defined \ref{SMSTerms} followed by a primer of available tap test software \ref{ttsw}. A framework of the current work is established through discoveries illuminated by prior SMS research \ref{SMSFindings}. A brief discussion of both biomechanical and perception limitations \ref{rateLimits} concludes this chapter.
+What follows is a brief overview of SMS. Critical terminology is defined \ref{SMSTerms}, and followed by a primer of available tap test software \ref{ttsw}. A framework of the current work is established through discoveries illuminated by prior SMS research \ref{SMSFindings}. Finally, a brief discussion of both biomechanical and perception limitations \ref{rateLimits} concludes this chapter.
 
 \subsection{Terminology} \label{SMSTerms}
 The main method of data collection for SMS tap based tests involve collection of the time delta between the tap and event onset, called the \textit{asynchrony}. Within the context of this work it shall be defined as:
@@ -63,9 +65,9 @@ as shown in \ref{latencyCalc}.
 SMS research has given key insight to the expectations which inform the data analysis conducted in \ref{DataAnalysis}.
 
 \subsubsection{Variability}
-The variability $(SD_{asy})$ is generally lower in professional musicians that non-musicians (no musical exposure). In an isochronous test with IOI of 500ms, surprisingly no difference in $(SD_{asy})$ was found between amateurs and non-musicians \ref{repp2013sensorimotor}. From this study it is safe to assume the data analysis of this work will be grouped into professionals vs. (non-musicians and amateurs).
+The variability $(SD_{asy})$ is generally lower in professional musicians than non-musicians (no prior musical exposure). In an isochronous test with IOI of 500ms, surprisingly no difference in $(SD_{asy})$ was found between amateurs and non-musicians \ref{repp2013sensorimotor}. From this study it is safe to assume the data analysis of this work will be grouped into professionals vs. (non-musicians and amateurs).
 
-Percussionists and pianists had the lowest ITI of all musicians, which implies that a high level of rhythmic expertise reduces variability of tapping. Furthermore, as the duration of the IOI increases, or slower beats per minute, $(SD_{asy})$ increased in a non linear fashion. 
+Percussionists and pianists had the lowest ITI of all musicians. This might imply that a high level of rhythmic expertise reduces variability of tapping, but due to the percussive nature of the instrument becomes hard to determine. Furthermore, as the duration of the IOI increases, or slower beats per minute, $(SD_{asy})$ increased in a non linear fashion. 
 
 When professionals migrated away from the tap test and instead used their native instruments, the results were greatly improved. It was reported by Stoklasa, Liebermann, and Fischinger in a paper presented at the Music Perception and Cognition in 2012 that musicians playing their own brass or string instrument in synchrony with a metronome showed a negligible NMA ($–2 ms$), unlike their tapping results ($-13 ms$) \cite{repp2013sensorimotor}.
 
