--- a/Thesis/bibliography/references.bib
+++ b/Thesis/bibliography/references.bib
@@ -138,6 +138,20 @@
   url = {https://www.adafruit.com/product/2776},
   urldate = {2018-04-23}
 }
+@online{Peterson,
+  author = {Peterson},
+  title = {{BodyBeat Sync}},
+  year = 2018,
+  url = {https://www.petersontuners.com/products/bodybeatsync/},
+  urldate = {2018-05-09}
+}
+@online{Soundbrenner,
+  author = {Soundbrenner},
+  title = {{Soundbrenner}},
+  year = 2018,
+  url = {https://www.soundbrenner.com/},
+  urldate = {2018-05-09}
+}
 @article{elliott2009mattap,
   title={MatTAP: a MATLAB toolbox for the control and analysis of movement synchronisation experiments},
   author={Elliott, Mark T and Welchman, Andrew E and Wing, Alan M},
