--- a/Thesis/thesis-previousWork.tex
+++ b/Thesis/thesis-previousWork.tex
@@ -1,14 +1,12 @@
 \chapter{Previous Work}
 
-This chapter begins with SMS topics that attempt to debunk what is known as the Auditory Advantage \ref{AudAdv}. From there, three specific research projects are discussed, each directly informing design of the haptic built for this project: the haptic drum kit \ref{HD}, vibrotactile metronome \ref{vibrotactileMetronome}, and the continuous visual metronome \ref{visualMet}. To conclude, \ref{commercial} grants a brief insight towards commercially realized products relevant to the field.
+This chapter begins with a few SMS topics which attempt to debunk what is known as the Auditory Advantage \ref{AudAdv}. From there, three specific research projects are discussed, each directly informing design of the haptic built for this project: the haptic drum kit \ref{HD}, vibrotactile metronome \ref{vibrotactileMetronome}, and the continuous visual metronome \ref{visualMet}. To conclude, \ref{commercial} grants a brief insight towards commercially realized products relevant to the field.
 
 \section{Auditory Advantage} \label{AudAdv}
-Most SMS research leans toward the notion of a distinct advantage from the discretely timed auditory stimulus, supporting a implying that the neural and evolutionary mechanisms underlying beat synchronization are modality-specific. However, the following examples are proponents supporting the hypothesis of this work, predominantly involving the relatively new tactile field.
+Most SMS research leans toward the notion of a distinct advantage from the discretely timed auditory stimulus, implying that the neural and evolutionary mechanisms underlying beat synchronization are modality-specific. However, the following examples are proponents supporting the hypothesis of this work, predominantly involving the relatively new tactile field.
 
 \subsection{Multisensory Cues}
-Maintaining synchrony with a periodic event requires that the central nervous system (CNS) compensate for timing variation arising from sensory, decision and motor processing noise. Keeping in time with a pacing source (metronome) requires continual corrections based on the timing error (asynchrony) between the metronome and performed actions.
-
-The CNS can alternate between cues depending on the demand of the task or combine info from different senses. In the context of rhythmic cues the brain will weigh signals according to the relative reliability in the timing of the events across modalities, ensuring optimal movement production to the underlying event extracted from the signals. 
+Maintaining synchrony with a periodic event requires that the central nervous system (CNS) compensate for timing variation arising from sensory, decision and motor processing noise. Keeping in time with a pacing source (metronome) requires continual corrections based on the timing error (asynchrony) between the metronome and performed actions. The CNS can alternate between cues depending on the demand of the task or combine info from different senses. In the context of rhythmic cues the brain will weigh signals according to the relative reliability in the timing of the events across modalities, ensuring optimal movement production to the underlying event extracted from the signals. 
 
 In an experiment carried out by Elliott in 2010, it was discovered that the variability of asynchrony for unimodal tactile cues was lower than for the visual metronome (F1,9 = 6.929, P = 0.027) and only slightly higher than that for unimodal auditory cues. \cite{elliott2010multisensory}
 
@@ -43,13 +41,9 @@ At the end of the proposal, the real-time setup was migrated to post-processing 
 In a novel advancement challenging the auditory advantage and perhaps paving the way towards a more meaningful gesture, researchers in the Psychology department at Sun Yat-Sin University in Guangdong found continuous motion of a bouncing ball to be as stable as synchronization to an auditory metronome.
 ~\cite{gan2015synchronization}
 
-Though stability of beat synchronization to discrete visual modalities (a flash of light) had been shown to be less stable that its auditory counterpart, the design of a more meaningful visual had been previously unexplored. The team designed a visual bouncing ball simulation which has acceleration manipulations to fit the IOI desired. Participants were instructed to tap to the bottom position of the bounce. Results for the bouncing ball visual were nearly equivalent to the auditory control tests.
+Though stability of beat synchronization to discrete visual modalities (a flash of light) had been shown to be less stable that its auditory counterpart, the design of a more meaningful visual had been previously unexplored. The team designed a visual bouncing ball simulation which has acceleration manipulations to fit the IOI desired. Participants were instructed to tap to the bottom position of the bounce. Results for the bouncing ball visual were nearly equivalent to the auditory control tests. The research carried out by this group was direct motivation to expand this project into the tactile modality.
 
 \subsection{Commercial Introspection} \label{commercial}
-Peterson tuner BodyBeat Sync (\$140) seeks to revolutionize the traditional metronome through its extensive coverage of all three modalities with a wearable pulsing vibration unit which claims to “allow musicians to easily internalize the beat and develop a note value relationship both audibly and physically.” [Peterson Citation]
+Peterson tuner BodyBeat Sync (\$140) seeks to revolutionize the traditional metronome through its extensive coverage of all three modalities with a wearable pulsing vibration unit which claims to “allow musicians to easily internalize the beat and develop a note value relationship both audibly and physically.” \cite{Peterson} 
 
-Ramp up/down as well as proof via quantification of this rhythmic internalization are missing.
-
-The Soundbrenner (\$99) is a vibration based metronome using an instantaneous pulse and claims that in freeing the ears, it has “brought the rhythm closer to the body, making it more comfortable and natural to feel the beat and swing of the music instead of chasing the click.” [Soundbrenner Citation]
-
-Similarly, lack of ramp up/down as well as numerical proof.
+The Soundbrenner (\$99) is a vibration based metronome using an instantaneous pulse and claims that in freeing the ears, it has “brought the rhythm closer to the body, making it more comfortable and natural to feel the beat and swing of the music instead of chasing the click.” \cite{Soundbrenner}
